# distributed-systems-visualizer

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  TODO.md  WORKSPACE.bazel  eslint.config.mjs  next.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: deploy.yml
app/: layout.tsx  page.tsx
app/cap-theorem/: page.tsx
app/chandy-lamport/: page.tsx
app/consensus-variants/: page.tsx
app/consistent-hashing/: page.tsx
app/crdts/: page.tsx
app/distributed-locking/: page.tsx
app/distributed-transactions/: page.tsx
app/eventual-consistency/: page.tsx
app/failure-detectors/: page.tsx
app/gossip-anti-entropy/: page.tsx
app/lamport-clocks/: page.tsx
app/load-balancing/: page.tsx
app/merkle-anti-entropy/: page.tsx
app/network-partitions/: page.tsx
app/paxos/: page.tsx
app/pbft/: page.tsx
app/quorum-replication/: page.tsx
app/raft/: page.tsx
app/replication-log/: page.tsx
app/sharding-rebalancing/: page.tsx
app/two-phase-commit/: page.tsx
app/vector-clocks/: page.tsx
components/: ControlPanel.tsx  ExplanationPanel.tsx  ExportMenu.tsx  Navigation.tsx  ProgressDashboard.tsx  QuizComponent.tsx  TopicArticleDrawer.tsx
data/: topic-articles.ts
hooks/: useClaudeExplainer.ts  useProgress.ts  useSimulation.ts
lib/: claude-api.ts  export.ts  progress.ts  simulation-engine.ts  types.ts
lib/algorithms/: chandyLamport.ts  consensusVariants.ts  consistentHashing.ts  crdts.ts  distributedLock.ts  distributedTransactions.ts  eventualConsistency.ts  failureDetectors.ts  gossipAntiEntropy.ts  lamportClocks.ts  loadBalancing.ts  merkleAntiEntropy.ts  networkPartitions.ts  paxos.ts  pbft.ts  quorumReplication.ts  raft.ts  replicationLog.ts  shardingRebalancing.ts  twoPhaseCommit.ts  vectorClocks.ts
tools/bazel/: build.sh  dev.sh  lint.sh
visualizers/chandy-lamport/: scenarios.ts
visualizers/consensus-variants/: scenarios.ts
visualizers/consistent-hashing/: scenarios.ts
visualizers/crdts/: scenarios.ts
visualizers/distributed-locking/: scenarios.ts
visualizers/distributed-transactions/: scenarios.ts
visualizers/eventual-consistency/: scenarios.ts
visualizers/failure-detectors/: scenarios.ts
visualizers/gossip-anti-entropy/: scenarios.ts
visualizers/lamport-clocks/: scenarios.ts
visualizers/load-balancing/: scenarios.ts
visualizers/merkle-anti-entropy/: scenarios.ts
visualizers/network-partitions/: scenarios.ts
visualizers/paxos/: scenarios.ts
visualizers/pbft/: scenarios.ts
visualizers/quorum-replication/: scenarios.ts
visualizers/raft/: scenarios.ts
visualizers/replication-log/: scenarios.ts
visualizers/sharding-rebalancing/: scenarios.ts
visualizers/two-phase-commit/: scenarios.ts
visualizers/vector-clocks/: scenarios.ts
