load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:eslint/package_json.bzl", eslint_bin = "bin")
load("@npm//:next/package_json.bzl", next_bin = "bin")

npm_link_all_packages(name = "node_modules")

filegroup(
    name = "app_srcs",
    srcs = glob(
        [
            "app/**",
            "components/**",
            "data/**",
            "hooks/**",
            "lib/**",
            "public/**",
            "visualizers/**",
            "*.json",
            "*.mjs",
            "*.ts",
        ],
        exclude = [
            ".next/**",
            "node_modules/**",
            "out/**",
            "package-lock.json",
            "pnpm-lock.yaml",
        ],
    ),
    visibility = ["//visibility:private"],
)

next_bin.next_binary(
    name = "build",
    args = ["build", "--webpack"],
    chdir = package_name(),
    data = [
        ":app_srcs",
        ":node_modules",
        "next-env.d.ts",
        "next.config.mjs",
        "package.json",
        "postcss.config.mjs",
        "tsconfig.json",
    ],
)

next_bin.next_binary(
    name = "dev",
    args = ["dev"],
    chdir = package_name(),
    data = [
        ":app_srcs",
        ":node_modules",
        "next-env.d.ts",
        "next.config.mjs",
        "package.json",
        "postcss.config.mjs",
        "tsconfig.json",
    ],
)

eslint_bin.eslint_binary(
    name = "lint",
    args = ["."],
    chdir = package_name(),
    data = [
        ":app_srcs",
        ":node_modules",
        "eslint.config.mjs",
        "package.json",
    ],
)
